[project]
name = "samsungproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Fedor Shadaev",email = "shadaevf@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
